include/psr/c/database.h

// Opaque handle type
typedef struct psr_database psr_database_t;