bindings/dart/lib/src/ffi/bindings.dart


  late final _psr_database_read_vector_parameterPtr = _lookup<
      ffi.NativeFunction<
          psr_read_result_t Function(
              ffi.Pointer<psr_database_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('psr_database_read_vector_parameter');
  late final _psr_database_read_vector_parameter =
      _psr_database_read_vector_parameterPtr.asFunction<
          psr_read_result_t Function(
              ffi.Pointer<psr_database_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  psr_read_result_t psr_database_read_set_parameters(
    ffi.Pointer<psr_database_t> db,
    ffi.Pointer<ffi.Char> collection,
    ffi.Pointer<ffi.Char> attribute,
  ) {
    return _psr_database_read_set_parameters(
      db,
      collection,
      attribute,
    );
  }

  late final _psr_database_read_set_parametersPtr = _lookup<
      ffi.NativeFunction<
          psr_read_result_t Function(
              ffi.Pointer<psr_database_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('psr_database_read_set_parameters');
  late final _psr_database_read_set_parameters =
      _psr_database_read_set_parametersPtr.asFunction<
          psr_read_result_t Function(ffi.Pointer<psr_database_t>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  psr_read_result_t psr_database_read_set_parameter(
    ffi.Pointer<psr_database_t> db,
    ffi.Pointer<ffi.Char> collection,
    ffi.Pointer<ffi.Char> attribute,
    ffi.Pointer<ffi.Char> label,
  ) {
    return _psr_database_read_set_parameter(
      db,
      collection,
      attribute,
      label,
    );
  }

  late final _psr_database_read_set_parameterPtr = _lookup<
      ffi.NativeFunction<
          psr_read_result_t Function(
              ffi.Pointer<psr_database_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('psr_database_read_set_parameter');
  late final _psr_database_read_set_parameter =
      _psr_database_read_set_parameterPtr.asFunction<
          psr_read_result_t Function(
              ffi.Pointer<psr_database_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  void psr_value_free(
    ffi.Pointer<psr_value_t> value,
  ) {
    return _psr_value_free(
      value,
    );
  }

  late final _psr_value_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<psr_value_t>)>>(
          'psr_value_free');
  late final _psr_value_free =
      _psr_value_freePtr.asFunction<void Function(ffi.Pointer<psr_value_t>)>();

  void psr_read_result_free(
    ffi.Pointer<psr_read_result_t> result,
  ) {
    return _psr_read_result_free(
      result,
    );
  }

  late final _psr_read_result_freePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<psr_read_result_t>)>>(
      'psr_read_result_free');
  late final _psr_read_result_free = _psr_read_result_freePtr
      .asFunction<void Function(ffi.Pointer<psr_read_result_t>)>();

  ffi.Pointer<psr_element_t1> psr_element_create() {
    return _psr_element_create();
  }

  late final _psr_element_createPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<psr_element_t1> Function()>>(
          'psr_element_create');
  late final _psr_element_create = _psr_element_createPtr
      .asFunction<ffi.Pointer<psr_element_t1> Function()>();

  void psr_element_destroy(
    ffi.Pointer<psr_element_t1> element,
  ) {
    return _psr_element_destroy(
      element,
    );
  }

  late final _psr_element_destroyPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<psr_element_t1>)>>(
      'psr_element_destroy');
  late final _psr_element_destroy = _psr_element_destroyPtr
      .asFunction<void Function(ffi.Pointer<psr_element_t1>)>();

  void psr_element_clear(
    ffi.Pointer<psr_element_t1> element,
  ) {
    return _psr_element_clear(
      element,
    );
  }

  late final _psr_element_clearPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<psr_element_t1>)>>(
      'psr_element_clear');
  late final _psr_element_clear = _psr_element_clearPtr
      .asFunction<void Function(ffi.Pointer<psr_element_t1>)>();

  int psr_element_set_int(
    ffi.Pointer<psr_element_t1> element,
    ffi.Pointer<ffi.Char> name,
    int value,
  ) {
    return _psr_element_set_int(
      element,
      name,
      value,
    );
  }

  late final _psr_element_set_intPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<psr_element_t1>, ffi.Pointer<ffi.Char>,
              ffi.Int64)>>('psr_element_set_int');
  late final _psr_element_set_int = _psr_element_set_intPtr.asFunction<
      int Function(ffi.Pointer<psr_element_t1>, ffi.Pointer<ffi.Char>, int)>();

  int psr_element_set_double(
    ffi.Pointer<psr_element_t1> element,
    ffi.Pointer<ffi.Char> name,
    double value,
  ) {
    return _psr_element_set_double(
      element,
      name,
      value,
    );
  }

  late final _psr_element_set_doublePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<psr_element_t1>, ffi.Pointer<ffi.Char>,
              ffi.Double)>>('psr_element_set_double');
  late final _psr_element_set_double = _psr_element_set_doublePtr.asFunction<
      int Function(
          ffi.Pointer<psr_element_t1>, ffi.Pointer<ffi.Char>, double)>();

  int psr_element_set_string(
    ffi.Pointer<psr_element_t1> element,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _psr_element_set_string(
      element,
      name,
      value,
    );
  }

  late final _psr_element_set_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<psr_element_t1>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('psr_element_set_string');
  late final _psr_element_set_string = _psr_element_set_stringPtr.asFunction<
      int Function(ffi.Pointer<psr_element_t1>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  int psr_element_set_null(
    ffi.Pointer<psr_element_t1> element,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _psr_element_set_null(
      element,
      name,
    );
  }

  late final _psr_element_set_nullPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<psr_element_t1>,
              ffi.Pointer<ffi.Char>)>>('psr_element_set_null');
  late final _psr_element_set_null = _psr_element_set_nullPtr.asFunction<
      int Function(ffi.Pointer<psr_element_t1>, ffi.Pointer<ffi.Char>)>();

  int psr_element_set_array_int(
    ffi.Pointer<psr_element_t1> element,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Int64> values,
    int count,
  ) {
    return _psr_element_set_array_int(
      element,
      name,
      values,
      count,
    );
  }

  late final _psr_element_set_array_intPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<psr_element_t1>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int64>, ffi.Int32)>>('psr_element_set_array_int');
  late final _psr_element_set_array_int =
      _psr_element_set_array_intPtr.asFunction<
          int Function(ffi.Pointer<psr_element_t1>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int64>, int)>();

  int psr_element_set_array_double(
    ffi.Pointer<psr_element_t1> element,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Double> values,
    int count,
  ) {
    return _psr_element_set_array_double(
      element,
      name,
      values,
      count,
    );
  }

  late final _psr_element_set_array_doublePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<psr_element_t1>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Double>,
              ffi.Int32)>>('psr_element_set_array_double');
  late final _psr_element_set_array_double =
      _psr_element_set_array_doublePtr.asFunction<
          int Function(ffi.Pointer<psr_element_t1>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Double>, int)>();

  int psr_element_set_array_string(
    ffi.Pointer<psr_element_t1> element,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Pointer<ffi.Char>> values,
    int count,
  ) {
    return _psr_element_set_array_string(
      element,
      name,
      values,
      count,
    );
  }

  late final _psr_element_set_array_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<psr_element_t1>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Int32)>>('psr_element_set_array_string');
  late final _psr_element_set_array_string =
      _psr_element_set_array_stringPtr.asFunction<
          int Function(ffi.Pointer<psr_element_t1>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>, int)>();

  int psr_element_has_scalars(
    ffi.Pointer<psr_element_t1> element,
  ) {
    return _psr_element_has_scalars(
      element,
    );
  }

  late final _psr_element_has_scalarsPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<psr_element_t1>)>>(
      'psr_element_has_scalars');
  late final _psr_element_has_scalars = _psr_element_has_scalarsPtr
      .asFunction<int Function(ffi.Pointer<psr_element_t1>)>();

  int psr_element_has_arrays(
    ffi.Pointer<psr_element_t1> element,
  ) {
    return _psr_element_has_arrays(
      element,
    );
  }

  late final _psr_element_has_arraysPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<psr_element_t1>)>>(
      'psr_element_has_arrays');
  late final _psr_element_has_arrays = _psr_element_has_arraysPtr
      .asFunction<int Function(ffi.Pointer<psr_element_t1>)>();

  int psr_element_scalar_count(
    ffi.Pointer<psr_element_t1> element,
  ) {
    return _psr_element_scalar_count(
      element,
    );
  }

  late final _psr_element_scalar_countPtr = _lookup<
          ffi.NativeFunction<ffi.Size Function(ffi.Pointer<psr_element_t1>)>>(
      'psr_element_scalar_count');
  late final _psr_element_scalar_count = _psr_element_scalar_countPtr
      .asFunction<int Function(ffi.Pointer<psr_element_t1>)>();

  int psr_element_array_count(
    ffi.Pointer<psr_element_t1> element,
  ) {
    return _psr_element_array_count(
      element,
    );
  }

  late final _psr_element_array_countPtr = _lookup<
          ffi.NativeFunction<ffi.Size Function(ffi.Pointer<psr_element_t1>)>>(
      'psr_element_array_count');
  late final _psr_element_array_count = _psr_element_array_countPtr
      .asFunction<int Function(ffi.Pointer<psr_element_t1>)>();

  ffi.Pointer<ffi.Char> psr_element_to_string(
    ffi.Pointer<psr_element_t1> element,
  ) {
    return _psr_element_to_string(
      element,
    );
  }

  late final _psr_element_to_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<psr_element_t1>)>>('psr_element_to_string');
  late final _psr_element_to_string = _psr_element_to_stringPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<psr_element_t1>)>();

  void psr_string_free(
    ffi.Pointer<ffi.Char> str,
  ) {
    return _psr_string_free(
      str,
    );
  }

  late final _psr_string_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'psr_string_free');
  late final _psr_string_free =
      _psr_string_freePtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();
}

abstract class psr_error_t {
  static const int PSR_OK = 0;
  static const int PSR_ERROR_INVALID_ARGUMENT = -1;
  static const int PSR_ERROR_DATABASE = -2;
  static const int PSR_ERROR_MIGRATION = -3;
  static const int PSR_ERROR_SCHEMA = -4;
  static const int PSR_ERROR_CREATE_ELEMENT = -5;
  static const int PSR_ERROR_NOT_FOUND = -6;
}
